--- a/hypr/source/env.conf
+++ b/hypr/source/env.conf
@@ -4,3 +4,7 @@
 # env = XCURSOR_SIZE,24
 # env = QT_STYLE_OVERRIDE,kvantum
 #
+env = QT_QPA_PLATFORMTHEME, qt5ct
+env = QT_QPA_PLATFORMTHEME, qt6ct
+env = QT_QPA_PLATFORM, wayland
+env = QT_QPA_CURSOR_THEME, Bibata-Modern-Ice
