--- a/hypr/source/exec.conf
+++ b/hypr/source/exec.conf
@@ -1,4 +1,5 @@
 # exec-once = swww-daemon
+exec-once = hyprctl setcursor Bibata-Modern-Ice 24
 exec-once = waybar
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = swaybg -i /home/praveen/.config/wallpaper/wallpaper.png
